--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,10 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    paths:
+      - 'nodejs/**'
+    branches: 
+      - main
     paths-ignore:
       - 'kubernetes/deployment.yaml'  # Ignore changes to this file to prevent loops
   pull_request:
@@ -12,6 +15,9 @@ jobs:
   test:
     name: Unit Testing
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: nodejs
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -31,6 +37,9 @@ jobs:
   lint:
     name: Static Code Analysis
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: nodejs
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -51,6 +60,9 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     needs: [test, lint]
+    defaults:
+      run:
+        working-directory: nodejs
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -77,6 +89,9 @@ jobs:
     name: Docker Build and Push
     runs-on: ubuntu-latest
     needs: [build]
+    defaults:
+      run:
+        working-directory: nodejs
     env:
       REGISTRY: ghcr.io
       IMAGE_NAME: ${{ github.repository }}
@@ -90,7 +105,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          path: dist/
+          path: nodejs/dist/
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -115,7 +130,8 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./nodejs
+          file: ./nodejs/Dockerfile
           push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -134,7 +150,8 @@ jobs:
       - name: Push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./nodejs
+          file: ./nodejs/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
