--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,12 +2,9 @@ name: CI/CD Pipeline
 
 on:
   push:
+    branches: [ main ]
     paths:
       - 'nodejs/**'
-    branches: 
-      - main
-    paths-ignore:
-      - 'kubernetes/deployment.yaml'  # Ignore changes to this file to prevent loops
   pull_request:
     branches: [ main ]
 
