--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -137,10 +137,10 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           load: true
       
-      - name: Run Trivy vulnerability scanner
+      - name: Trivy scan on commit image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ steps.meta.outputs.tags }}
+          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
