--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,7 @@ jobs:
   test:
     name: Unit Testing
     runs-on: ubuntu-latest
+    
     defaults:
       run:
         working-directory: nodejs
@@ -59,6 +60,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     needs: [test, lint]
+    env:
+      REGISTRY: ghcr.io
     defaults:
       run:
         working-directory: nodejs
@@ -137,14 +140,16 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           load: true
 
-      - name: Set lowercase image ref for Trivy
-        id: image_ref
-        run: echo "IMAGE_REF=${{ env.REGISTRY }}/$(echo '${{ env.IMAGE_NAME }}' | tr '[:upper:]' '[:lower:]'):sha-${{ github.sha }}" >> $GITHUB_ENV
+      - name: Set lowercase image name
+        id: imagevars
+        run: |
+          echo "image_ref=${{ env.REGISTRY }}/$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]'):sha-${{ github.sha }}" >> $GITHUB_OUTPUT
+          echo "lower_image_name=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
       - name: Trivy scan on commit image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.IMAGE_REF }}
+          image-ref: ${{ steps.imagevars.outputs.image_ref }}
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
@@ -181,12 +186,15 @@ jobs:
           git config user.email "actions@github.com"
 
       - name: Set lowercase image name
-        run: echo "LOWER_IMAGE_NAME=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+        id: imagevars
+        run: echo "lower_image_name=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
 
       - name: Update Kubernetes deployment file
         env:
           IMAGE_TAG: sha-${{ github.sha }}
           REGISTRY: ghcr.io
+          LOWER_IMAGE_NAME: ${{ steps.imagevars.outputs.lower_image_name }}
         run: |
           NEW_IMAGE="${REGISTRY}/${LOWER_IMAGE_NAME}:${IMAGE_TAG}"
           sed -i "s|image: ${REGISTRY}/.*|image: ${NEW_IMAGE}|g" kubernetes/deployment.yaml
