--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -204,6 +204,6 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git add kubernetes/deployment.yaml
+          git add nodejs/kubernetes/deployment.yaml
           git commit -m "Update Kubernetes deployment with new image tag: ${{ needs.docker.outputs.image_tag }} [skip ci]" || echo "No changes to commit"
           git push
